--- a/package.json
+++ b/package.json
@@ -1,26 +1,16 @@
 {
-  "name": "loperdi",
-  "version": "0.0.1",
-  "description": "Aplicación móvil para la búsqueda de documento perdidos",
-  "main": "index.js",
+  "name": "loperdibackend",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cristian-programmer/loPerdi.git"
-  },
-  "keywords": [
-    "nodejs",
-    "kafka",
-    "mongodb",
-    "mysql",
-    "loPerdi"
-  ],
-  "author": "SOIMA tecnology",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/cristian-programmer/loPerdi/issues"
-  },
-  "homepage": "https://github.com/cristian-programmer/loPerdi#readme"
+  "dependencies": {
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "morgan": "~1.9.0",
+    "pug": "2.0.0-beta11"
+  }
 }
